creating the header ghost pages

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 <body>
     <header class="flex justify-between ">
         <h1 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="index.html">Acasa</a></h1>
-        <h2 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl">Locatii</h2>
-        <h3 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl">Orare</h3>
-        <h4 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl">Inscrieri</h4>
-        <h5 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl">Contactare</h5>
+        <h2 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="locatii.html">Locatii</a></h2>
+        <h3 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="orare.html">Orare</a></h3>
+        <h4 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="inscrieri.html">Inscrieri</a></h4>
+        <h5 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="contactare.html">Contactare</a></h5>
 
     </header>
     <!-- <header>
