--- a/contactare.html
+++ b/contactare.html
@@ -51,13 +51,19 @@
     </style>
 </head>
 <body>
-    <header class="flex justify-between ">
-        <h1 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="index.html">Acasa</a></h1>
-        <h2 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="locatii.html">Locatii</a></h2>
-        <h3 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="orare.html">Orare</a></h3>
-        <h4 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="inscrieri.html">Inscrieri</a></h4>
-        <h5 class="text-base sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl"><a href="contactare.html">Contactare</a></h5>
-
+    <header class="flex justify-between items-center px-4 py-2">
+        <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
+            <a href="index.html" class="text-white">Acasa</a>
+        </div>
+        <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
+            <h1 class="text-white hidden sm:inline">Scoala Robotilor</h1>
+        </div>
+        <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl flex gap-4">
+            <a href="locatii.html" class="text-white">Locatii</a>
+            <a href="orare.html" class="text-white">Orare</a>
+            <a href="inscrieri.html" class="text-white">Inscrieri</a>
+            <a href="contactare.html" class="text-white">Contactare</a>
+        </div>
     </header>
 </body>
 </html>
