--- a/inscrieri.html
+++ b/inscrieri.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <script src="functions.js" defer></script>
     <style>
         body {
             margin: 0;
@@ -56,7 +57,9 @@
             <a href="index.html" class="text-white">Acasa</a>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-            <h1 class="text-white hidden sm:inline">Scoala Robotilor</h1>
+            <h1 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
+                Scoala Robotilor
+            </h1>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl flex gap-4">
             <a href="locatii.html" class="text-white">Locatii</a>
