ghost page for robots si under line pt headers

--- a/locatii.html
+++ b/locatii.html
@@ -62,7 +62,7 @@
             </h1>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl flex gap-4">
-            <a href="locatii.html" class="text-white">Locatii</a>
+            <a href="locatii.html" class="underline decoration-solid text-white">Locatii</a>
             <a href="orare.html" class="text-white">Orare</a>
             <a href="inscrieri.html" class="text-white">Inscrieri</a>
             <a href="contactare.html" class="text-white">Contactare</a>
