--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <body>
         <header class="flex justify-between items-center px-4 py-2">
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-                <a href="index.html" class="text-white">Acasa</a>
+                <a href="index.html" class="underline decoration-solid text-white">Acasa</a>
             </div>
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
                 <h1 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
