adaugare bg mov la restu paginilor la inscriere

--- a/locatii.html
+++ b/locatii.html
@@ -137,7 +137,7 @@
             <a href="locatii.html" class="underline decoration-solid text-white">Locatii</a>
             <a href="orare.html" class="text-white">Orare</a>
             <a href="contactare.html" class="text-white">Contactare</a>
-            <a href="inscrieri.html" class="text-white">Inscrieri</a>
+            <a href="inscrieri.html" class="text-white bg-violet-500 hover:bg-violet-600 ">Inscrieri</a>
         </div>
     </header>
 
