--- a/contactare.html
+++ b/contactare.html
@@ -133,7 +133,7 @@
             <a href="locatii.html" class="text-white">Locatii</a>
             <a href="orare.html" class="text-white">Orare</a>
             <a href="contactare.html" class=" underline decoration-solid text-white">Contactare</a>
-            <a href="inscrieri.html" class="text-white">Inscrieri</a>
+            <a href="inscrieri.html" class="text-white bg-violet-500 hover:bg-violet-600 ">Inscrieri</a>
         </div>
     </header>
 
