--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             font-size: 3vw;
             /* Adjust the font size for the paragraph */
         }
+        .container-content h2 {
+            font-size: 3vw;
+            /* Adjust the font size for the paragraph */
+        }
        
     </style>
     <title>Site Header</title>
@@ -147,12 +151,12 @@
     
     <body>
         <!-- big header on top of page -->
-        <header class="flex justify-between items-center px-4 py-2">
+        <header class="flex justify-between items-center px-3 py-2">
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
                 <a href="index.html" class="underline decoration-solid text-white">Acasa</a>
             </div>
-            <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-                <h2 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-l sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-size: 3vw">
+            <div class="text-sm sm:text-l md:text-xl lg:text-2xl xl:text-3xl">
+                <h2 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-l sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl ">
                     Scoala Robotilor
                 </h2>
             </div>
