--- a/inscrieri.html
+++ b/inscrieri.html
@@ -49,6 +49,73 @@
             }
 
         }
+        .purple-container {
+            background: linear-gradient(to right, #712ac8, #aa21f3);
+            padding: 1rem;
+            /* Add padding to create space around the container */
+            border-radius: 0.5rem;
+            /* Add border radius for rounded corners */
+            margin-top: 1rem;
+            /* Adjust the margin-top based on your design */
+
+
+            width: 90%;
+            /* Less wide */
+
+            max-height: 20rem;
+            /* Longer */
+            margin-left: auto;
+            /* Center horizontally */
+            margin-right: auto;
+            display: flex;
+            /* Use flexbox to align items */
+            align-items: center;
+            transition: transform 0.3s ease-in-out;
+            
+
+        }
+
+        .purple-container:hover {
+            transform: scale(1.05);
+            /* Scale up to 110% on hover */
+        }
+
+        #container-image {
+            display: block;
+            margin: auto;
+            /* Center the image horizontally */
+            max-width: 50%;
+            /* Ensure the image doesn't exceed its natural size */
+            height: auto;
+            max-height: 14rem;
+            align-self: flex-start;
+            border-radius: 0.90rem;
+            padding: 0.5rem;
+        }
+
+        .container-content {
+            flex-grow: 1;
+            font-size: 2vw;
+            /* Allow the content to take up remaining space */
+            text-align: center;
+            /* Center the text */
+        }
+
+        /* Header inside the container content */
+        .container-content h1 {
+            font-size: 4vw;
+            /* Adjust the font size for the header */
+            font-weight: bold;
+            /* Make the header thicker */
+            margin-bottom: 0.5rem;
+            /* Add some space between the header and paragraph */
+        }
+
+        /* Paragraph inside the container content */
+        .container-content p {
+            font-size: 3vw;
+            /* Adjust the font size for the paragraph */
+        }
     </style>
 </head>
 <body>
@@ -68,7 +135,24 @@
             <div>
 
                 <a href="inscrieri.html" class="text-white bg-violet-500  rounded hover:bg-violet-600 px-1 py-1">Inscrieri</a>
-            </div>        </div>
+            </div>       
+         </div>
     </header>
+    <div class="purple-container align-left">
+        <div class="container-content flex-collum">
+            <h1 flex>Inscrierile se vor face prin telefon până la o notificare ulterioară</h1>
+            <p>Taxa pentru un singur copil este de 40 de lei. Cu toate acestea, în situația în care copilul are un frățior sau vine însoțit de un prieten, vă oferim o reducere specială: prețul pentru al doilea copil se diminuează la jumătate. </p>
+            <p class="align-left">Plata se va face ori la venire ori la plecare sau totalul in ultima ora </p>
+        </div>
+    </div>
+    <div class="purple-container align-left">
+        <div class="container-content flex-collum">
+            <a href="contactare.html" class="text-white underline decoration-solid">
+                
+                <h1 class="text-white text-4xl font-bold mb-4">❁  𝐼𝓃 𝒸𝒶𝓏 𝒹𝑒 𝓃𝑒𝒸𝓁𝒶𝓇𝒾𝓉𝒶𝓉𝒾, 𝒸o𝓃𝓉𝒶𝒸𝓉𝒶𝓉𝒾-𝓃𝑒  ❁</h1>
+            </a>
+        </div>
+    </div>
+
 </body>
 </html>
