--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="functions.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <style>
         body {
             margin: 0;
@@ -142,6 +144,16 @@
             font-size: 3vw;
             /* Adjust the font size for the paragraph */
         }
+        .slide-in-container {
+            opacity: 0;
+            transform: translateX(-100%);
+            transition: opacity 1s, transform 1s;
+        }
+
+        .slide-in-container.show {
+            opacity: 1;
+            transform: translateX(0);
+        }
        
     </style>
     <title>Site Header</title>
@@ -149,6 +161,7 @@
 
 <body>
     
+
     <body>
         <!-- big header on top of page -->
         <header class="flex justify-between items-center px-3 py-2">
@@ -156,7 +169,7 @@
                 <a href="index.html" class="underline decoration-solid text-white">Acasa</a>
             </div>
             <div class="text-sm sm:text-l md:text-xl lg:text-2xl xl:text-3xl">
-                <h2 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-l sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl ">
+                <h2 id="color-changing-title" class=" hidden sm:inline font-extrabold text-l sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl ">
                     Scoala Robotilor
                 </h2>
             </div>
@@ -166,7 +179,7 @@
                 <a href="contactare.html" class="text-white">Contactare</a>
                 <div>
 
-                    <a href="inscrieri.html" class="text-white bg-violet-500  rounded hover:bg-violet-600 px-1 py-1">Inscrieri</a>
+                    <a href="inscrieri.html" class="text-white bg-violet-500  animate__animated animate__heartBeat rounded hover:bg-violet-600  animate__animated animate__heartBeat px-1 py-1">Inscrieri</a>
                 </div>     
                    </div>
         </header>
@@ -206,7 +219,13 @@
             </div>
         </div>
     </div>
-
+   
+    <div class="purple-container slide-in-container animate__animated animate__backInLeft">
+        <div class="container-content flex-collum">
+            <h1>Your Title</h1>
+            <p>【﻿Ｈａｉｄｅ　ｓａ　ｉｎｔａｌｎｉｍ　ｒｏｂｏｔｉｉ】</p>
+        </div>
+    </div>
 
 </body>
 
