copy pasting structure

--- a/r2d2.html
+++ b/r2d2.html
@@ -231,11 +231,11 @@
         </div>
 
         <div class="metal-container align-center">
-            <a href="moonrover.html ">
+            <a href="sphero.html ">
 
                 <i class="icon bi-arrow-left-square-fill "></i>
             </a>
-            <a href="moonrover.html ">
+            <a href="sphero.html ">
                 <p class="paragraph">Robotul Anterior</p>
             </a>
 
