terminat moonrover page

--- a/moonrover.html
+++ b/moonrover.html
@@ -205,27 +205,23 @@
             </div>
         </header>
         <div class="content text-white">
-            <img id="mainImage" src="assets/r2d2.png" alt="Main Page Image">
+            <img id="mainImage" src="assets/Moonrover1.png" alt="Main Page Image">
             <!-- Add more content as needed -->
             <div class="purple-container align-left">
-                <img id="container-image" src="assets/r2d22.png" alt="Left Image">
+                <img id="container-image" src="https://sphero.com/cdn/shop/products/SpaceRover_GALLERY_3_9f8e1a87-fdaf-4660-b886-f05f88ada99a_800x.jpg?v=1594781718" alt="Left Image">
                 <div class="container-content flex-collum">
-                    <h1 flex>Explorator cu Secrete și Control Jedi</h1>
-                    <p>Descoperă universul Star Wars cu R2D2, robotul controlabil care îndeplinește misiuni secrete și
-                        răspunde la comenzi cu coduri misterioase. Îl poți manevra cu gesturi Jedi, aducând magia Star
-                        Wars direct în mâinile tale!</p>
+                    <h1 flex>Robotel Lunar de Colectare</h1>
+                    <p>Descoperă inovația în spațiu cu robotelul lunar dedicat colectării și interacțiunii inteligente. Echipat cu o mână multifuncțională, acest mic explorator nu numai că colectează eficient deșeuri, dar poate și să interacționeze cu mediul său. Cu funcții precum ciocanirea și emiterea de sunete, acest robotel adaugă o dimensiune ludică și expresivă în explorarea spațiului.</p>
                 </div>
             </div>
 
             <div class="purple-container align-right">
                 <div class="container-content flex-collum">
-                    <h1>Navighează prin Galaxie cu Efort Minim</h1>
-                    <p>Adună-ți forța și explorează galaxia cu robotul controlat gestual. Cu mișcări intuitive, acest
-                        companion aduce senzația de a manevra obiecte virtuale într-o aventură interactivă. O experiență
-                        Star Wars autentică, la îndemâna ta!</p>
+                    <h1>Interacțiune Avansată</h1>
+                    <p>Capabil să distingă diferențele subtile de lumină, acest companion tehnologic se adaptează la mediul său lunar, navigând cu inteligență și eficiență. Descoperă noile frontiere ale roboților spațiali cu acest mic explorator care aduce inovația și eficiența în colectarea deșeurilor în spațiul cosmic.</p>
                 </div>
                 <img id="container-image"
-                    src="https://i5.walmartimages.com/asr/fc3e06eb-0502-44e7-84eb-cb213ca40590_1.48fcd53acdb21bf9d066c68097845f3a.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF"
+                    src="https://normanandjules.com/cdn/shop/products/littlebits-space-rover-inventor-kit-5__37930.jpg?v=1680290650&width=300"
                     alt="Right Image">
             </div>
         </div>
