--- a/sphero.html
+++ b/sphero.html
@@ -231,20 +231,20 @@
         </div>
 
         <div class="metal-container align-center">
-            <a href="moonrover.html">
+            <a href="Ironman.html">
 
                 <i class="icon bi-arrow-left-square-fill "></i>
             </a>
-            <a href="moonrover.html">
+            <a href="Ironman.html">
                 <p class="paragraph">Robotul Anterior</p>
             </a>
 
 
-            <a href="sphero.html">
+            <a href="r2d2.html">
 
                 <p class="paragraph">Robotu Urmator</p>
             </a>
-            <a href="sphero.html">
+            <a href="r2d2.html">
 
                 <i class="icon bi bi-arrow-right-square-fill"></i>
             </a>
