terminat spero si iron man

--- a/Ironman.html
+++ b/Ironman.html
@@ -205,27 +205,25 @@
             </div>
         </header>
         <div class="content text-white">
-            <img id="mainImage" src="assets/r2d2.png" alt="Main Page Image">
+            <img id="mainImage" src="assets/Iron-man.png" alt="Main Page Image">
             <!-- Add more content as needed -->
             <div class="purple-container align-left">
-                <img id="container-image" src="assets/r2d22.png" alt="Left Image">
+                <img id="container-image" src="https://s.yimg.com/ob/image/79fc3d81-ff40-451c-960a-6370e6690c48.jpg" alt="Left Image">
                 <div class="container-content flex-collum">
-                    <h1 flex>Explorator cu Secrete și Control Jedi</h1>
-                    <p>Descoperă universul Star Wars cu R2D2, robotul controlabil care îndeplinește misiuni secrete și
-                        răspunde la comenzi cu coduri misterioase. Îl poți manevra cu gesturi Jedi, aducând magia Star
-                        Wars direct în mâinile tale!</p>
+                    <h1 flex>Mănușa Interactivă</h1>
+                    <p>Echipată cu luminite și sunete inspirate de tehnologia Iron Man, această mănușă oferă o experiență futuristă și distractivă. Cu o suprafață interactivă care permite desenul și schițarea, devii creatorul propriilor tale lumii digitale.
+
+                    </p>
                 </div>
             </div>
 
             <div class="purple-container align-right">
                 <div class="container-content flex-collum">
-                    <h1>Navighează prin Galaxie cu Efort Minim</h1>
-                    <p>Adună-ți forța și explorează galaxia cu robotul controlat gestual. Cu mișcări intuitive, acest
-                        companion aduce senzația de a manevra obiecte virtuale într-o aventură interactivă. O experiență
-                        Star Wars autentică, la îndemâna ta!</p>
+                    <h1>Creativitate și Tehnologie la Vârful Degetelor</h1>
+                    <p>Inovația stă în stiva electronică integrată, care nu doar controlează luminile și sunetele, ci și creează o interacțiune captivantă cu lumina din mediul înconjurător. Experimentează magia tehnologiei moderne într-un mod inedit, devenind eroul propriului tău univers cu ajutorul mănușei interactive.</p>
                 </div>
                 <img id="container-image"
-                    src="https://i5.walmartimages.com/asr/fc3e06eb-0502-44e7-84eb-cb213ca40590_1.48fcd53acdb21bf9d066c68097845f3a.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF"
+                    src="https://m.media-amazon.com/images/I/716jMRHFPmL._AC_UF894,1000_QL80_.jpg"
                     alt="Right Image">
             </div>
         </div>
