--- a/sphero.html
+++ b/sphero.html
@@ -205,27 +205,26 @@
             </div>
         </header>
         <div class="content text-white">
-            <img id="mainImage" src="assets/r2d2.png" alt="Main Page Image">
+            <img id="mainImage" src="assets/sphero.png" alt="Main Page Image">
             <!-- Add more content as needed -->
             <div class="purple-container align-left">
-                <img id="container-image" src="assets/r2d22.png" alt="Left Image">
+                <img id="container-image" src="https://assets.newatlas.com/dims4/default/5f453c6/2147483647/strip/true/crop/6369x4246+0+48/resize/1200x800!/quality/90/?url=http%3A%2F%2Fnewatlas-brightspot.s3.amazonaws.com%2Farchive%2Fsphero-sprk-plus-3.jpg" alt="Left Image">
                 <div class="container-content flex-collum">
-                    <h1 flex>Explorator cu Secrete și Control Jedi</h1>
-                    <p>Descoperă universul Star Wars cu R2D2, robotul controlabil care îndeplinește misiuni secrete și
-                        răspunde la comenzi cu coduri misterioase. Îl poți manevra cu gesturi Jedi, aducând magia Star
-                        Wars direct în mâinile tale!</p>
+                    <h1 flex>Roboțeii Sphero: Viteza </h1>
+                    <p>Întâmpină generația următoare de roboți cu sfericii noștri dinamici, micuți exploratori pe roți controlați cu telecomanda, pregătiți să aducă o doză de viteză și programare în lumea ta.
+
+                        Cu dimensiuni compacte și o mișcare agilă, acești roboți sferici transformă orice spațiu într-un teren de joacă plin de aventură. Cu ajutorul telecomenzii intuitive, vei putea să-i dirijezi cu precizie și să experimentezi o gamă variată de mișcări captivante.</p>
                 </div>
             </div>
 
             <div class="purple-container align-right">
                 <div class="container-content flex-collum">
-                    <h1>Navighează prin Galaxie cu Efort Minim</h1>
-                    <p>Adună-ți forța și explorează galaxia cu robotul controlat gestual. Cu mișcări intuitive, acest
-                        companion aduce senzația de a manevra obiecte virtuale într-o aventură interactivă. O experiență
-                        Star Wars autentică, la îndemâna ta!</p>
+                    <h1>Si Programare</h1>
+                    <p>
+                        Dar distracția nu se oprește aici! Acești roboți în miniatură îți oferă posibilitatea de a scrie și încărca coduri, deschizând ușa către lumea fascinantă a programării. Descoperă viteză și creativitate într-un singur pachet cu roboții sferici, companioni perfecți pentru oricine dorește să-și exploreze latura captivantă a tehnologiei.</p>
                 </div>
                 <img id="container-image"
-                    src="https://i5.walmartimages.com/asr/fc3e06eb-0502-44e7-84eb-cb213ca40590_1.48fcd53acdb21bf9d066c68097845f3a.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF"
+                    src="assets/image (2).png"
                     alt="Right Image">
             </div>
         </div>
