--- a/inscrieri.html
+++ b/inscrieri.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +43,7 @@
             }
 
         }
+
         .purple-container {
             background: linear-gradient(to right, #712ac8, #aa21f3);
             padding: 1rem;
@@ -57,7 +59,7 @@
             display: flex;
             align-items: center;
             transition: transform 0.3s ease-in-out;
-            
+
 
         }
 
@@ -93,13 +95,15 @@
         }
     </style>
 </head>
+
 <body>
     <header class="flex justify-between items-center px-4 py-2">
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
             <a href="index.html" class="text-white">Acasa</a>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-            <h1 id="color-changing-title" class="text-white hidden sm:inline font-extrabold text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
+            <h1 id="color-changing-title"
+                class="text-white hidden sm:inline font-extrabold text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
                 Scoala Robotilor
             </h1>
         </div>
@@ -109,25 +113,30 @@
             <a href="contactare.html" class="text-white">Contactare</a>
             <div>
 
-                <a href="inscrieri.html" class="text-white bg-violet-500  rounded hover:bg-violet-600 px-1 py-1">Inscrieri</a>
-            </div>       
-         </div>
+                <a href="inscrieri.html"
+                    class="text-white bg-violet-500  rounded hover:bg-violet-600 px-1 py-1">Inscrieri</a>
+            </div>
+        </div>
     </header>
     <div class="purple-container align-left">
         <div class="container-content flex-collum">
             <h1 flex>Inscrierile se vor face prin telefon până la o notificare ulterioară</h1>
-            <p>Taxa pentru un singur copil este de 40 de lei. Cu toate acestea, în situația în care copilul are un frățior sau vine însoțit de un prieten, vă oferim o reducere specială: prețul pentru al doilea copil se diminuează la jumătate. </p>
+            <p>Taxa pentru un singur copil este de 40 de lei. Cu toate acestea, în situația în care copilul are un
+                frățior sau vine însoțit de un prieten, vă oferim o reducere specială: prețul pentru al doilea copil se
+                diminuează la jumătate. </p>
             <p class="align-left">Plata se va face ori la venire ori la plecare sau totalul in ultima ora </p>
         </div>
     </div>
     <div class="purple-container align-left">
         <div class="container-content flex-collum">
             <a href="contactare.html" class="text-white underline decoration-solid">
-                
-                <h1 class="text-white text-4xl font-bold mb-4">❁ 𝐼𝓃 𝒸𝒶𝓏 𝒹𝑒 𝓃𝑒𝒸𝓁𝒶𝓇𝒾𝓉𝒶𝓉𝒾, 𝒸o𝓃𝓉𝒶𝒸𝓉𝒶𝓉𝒾-𝓃𝑒 ❁</h1>
+
+                <h1 class="text-white text-4xl font-bold mb-4">❁ 𝐼𝓃 𝒸𝒶𝓏 𝒹𝑒 𝓃𝑒𝒸𝓁𝒶𝓇𝒾𝓉𝒶𝓉𝒾,
+                    𝒸o𝓃𝓉𝒶𝒸𝓉𝒶𝓉𝒾-𝓃𝑒 ❁</h1>
             </a>
         </div>
     </div>
 
 </body>
+
 </html>
