bg hover all header

--- a/orare.html
+++ b/orare.html
@@ -124,7 +124,7 @@
 <body>
     <header class="flex justify-between items-center px-4 py-2">
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-            <a href="index.html" class="text-white">Acasa</a>
+            <a href="index.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Acasa</a>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
             <h1 id="color-changing-title"
@@ -133,9 +133,9 @@
             </h1>
         </div>
         <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl flex gap-4">
-            <a href="locatii.html" class="text-white">Locatii</a>
-            <a href="orare.html" class="underline decoration-solid text-white">Orare</a>
-            <a href="contactare.html" class="text-white">Contactare</a>
+            <a href="locatii.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Locatii</a>
+            <a href="orare.html" class="underline decoration-solid text-white rounded hover:bg-violet-600  px-1 py-1">Orare</a>
+            <a href="contactare.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Contactare</a>
             <div>
 
                 <a href="inscrieri.html"
