--- a/Ironman.html
+++ b/Ironman.html
@@ -149,7 +149,7 @@
         <!-- big header on top of page -->
         <header class="flex justify-between items-center px-3 py-2">
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-                <a href="index.html" class="underline decoration-solid text-white">Acasa</a>
+                <a href="index.html" class="underline decoration-solid text-white rounded hover:bg-violet-600  px-1 py-1">Acasa</a>
             </div>
             <div class="text-sm sm:text-l md:text-xl lg:text-2xl xl:text-3xl">
                 <h2 id="color-changing-title"
@@ -158,9 +158,9 @@
                 </h2>
             </div>
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl flex gap-4">
-                <a href="locatii.html" class="text-white">Locatii</a>
-                <a href="orare.html" class="text-white">Orare</a>
-                <a href="contactare.html" class="text-white">Contactare</a>
+                <a href="locatii.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Locatii</a>
+                <a href="orare.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Orare</a>
+                <a href="contactare.html" class="text-white rounded hover:bg-violet-600  px-1 py-1">Contactare</a>
                 <div>
 
                     <a href="inscrieri.html"
