last minute changes

--- a/r2d2.html
+++ b/r2d2.html
@@ -68,7 +68,7 @@
             display: block;
             margin: auto;
 
-            max-width: 100%;
+            max-width: 120%;
 
             height: auto;
 
@@ -185,7 +185,8 @@
         <!-- big header on top of page -->
         <header class="flex justify-between items-center px-3 py-2">
             <div class="text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl">
-                <a href="index.html" class="underline decoration-solid text-white rounded hover:bg-violet-600  px-1 py-1">Acasa</a>
+                <a href="index.html"
+                    class="underline decoration-solid text-white rounded hover:bg-violet-600  px-1 py-1">Acasa</a>
             </div>
             <div class="text-sm sm:text-l md:text-xl lg:text-2xl xl:text-3xl">
                 <h2 id="color-changing-title"
